# todo

./: Cargo.toml  Makefile  README.md  TODO.md  demo.tape  go.mod  go.sum  main.go  todo.service
internal/api/: api.go  scheduledTasksHandlers.go  serviceHandlers.go  tasks.go  tasksHandlers.go
internal/app/: app.go
internal/cli/: root.go
internal/cli/cl/: cl.go
internal/cli/format/: format.go
internal/cli/service/: service.go  serviceInitConfig.go  servicePrintEnv.go  serviceStart.go
internal/cli/task/: task.go  taskComplete.go  taskCreate.go  taskDelete.go  taskGet.go  taskList.go  taskList_test.go  taskSchedule.go  taskUpdate.go
internal/cli/task/scheduled/: scheduled.go  scheduledDelete.go  scheduledGet.go  scheduledList.go
internal/cli/task/tui/: create.go  detail.go  help.go  list.go  tui.go
internal/config/: api.go  api_test.go  cli.go  config.go  config_test.go
internal/models/: models.go
internal/storage/: scheduledTasks.go  storage.go  storage_test.go  tasks.go
internal/storage/migrations/: 0_init.sql
proto/: todo.pb.go  todo.proto  todo_grpc.pb.go  todo_message.pb.go  todo_message.proto  todo_transport.pb.go  todo_transport.proto
src/: api.rs  cli.rs  config.rs  main.rs  models.rs  storage.rs  storage_test.rs
src/api/: handlers.rs  mod.rs
src/tui/: mod.rs
src/web/: mod.rs
