[package]
authors = ["Clint J Edwards <clint.j.edwards@gmail.com>"]
edition = "2018"
name = "todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web service
async-std = {version = "1.6.5", features = ["attributes"]}
tide = "0.13.0"
# logging
slog = "2.5.2"
slog-async = "2.5.0"
slog-scope = "4.3.0"
slog-term = "2.6.0"
# env vars & json
serde = {version = "1.0.116", features = ["derive"]}
# key-value store
sled = "0.34.4"
# command line formatting and implementation
structopt = "0.3"
# config/env vars
envy = "0.4.1"
# error handling
anyhow = "1.0"
# binary encoding for db
bincode = "1.3.1"
# run db test serially
serial_test = "0.5.0"
# generate ids
rand = "0.7.3"
# http client
reqwest = { version = "0.10", features = ["blocking", "json"] }
# cli tree printer
ptree = "0.3.0"
# testing globals
lazy_static = "1.4.0"
# terminal coloring
colored = "2"
tempfile = "3.2"
toml = "0.5"
which = "4.1"
tui = "0.15"
termion = "1.5"
